# Example-Volume-Extractor

./: LICENSE  README.md
MRILibrary/: CMakeLists.txt  MRILib.pc.in  MRILibraryConfig.cmake  main.cpp
MRILibrary/analyzers/: analyzer.cpp  analyzer.h  cfaAnalyzer.cpp  cfaAnalyzer.h  opftaAnalyzer.cpp  opftaAnalyzer.h  textureAnalyzer.cpp  textureAnalyzer.h
MRILibrary/datatypes/: cfa.h  extractor.h  opfta.h  texture.h
MRILibrary/extractors/: extractor.cpp  extractor.h  roiExtractor.cpp  roiExtractor.h  voiExtractor.cpp  voiExtractor.h
example/: CMakeLists.txt  main.cpp
t2/: CMakeLists.txt  a.out  main.cpp
t2/bu/: CMakeCache.txt
